# eventum_tg_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  insta_bot.py  logger_config.py  pyproject.toml  run.py  tg_bot.py
bot/: tg_bot.py
bot/handlers/: base_exam_handler.py  exam_flow.py  handlers.py  material_handler.py
bot/utils/: button.py  message_scheduler.py  subscription_checker.py
constants/: constants.py
insta_bot/: Dockerfile  insta_bot.py  pyproject.toml
tg_bot/: Dockerfile  pyproject.toml  tg_bot.py
