[project]
name = "insta_tg_bot"
version = "0.1.0"
description = "Telegram and Instagram bots for reading comments and answering to direct"
authors = [{ name = "boxdancer", email = "mr.tselin@yandex.ru" }]
requires-python = ">=3.11"

dependencies = [
    "instagrapi",
    "python-dotenv",
    "python-telegram-bot>=20.0,<21.0",
    "Pillow>=8.1.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["insta_bot", "tg_bot"]
