[project]
name = "insta_bot"
version = "0.1.0"
description = "Instagram bot for reading comments and answering to direct"
authors = [{ name = "boxdancer", email = "mr.tselin@yandex.ru" }]
requires-python = ">=3.11"

dependencies = [
    "instagrapi",
    "python-dotenv",
    "Pillow>=8.1.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"